--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
     margin-bottom: 0;
 }
 
-@media (max-width:460px) {
+@media screen and (max-width:460px) {
     h1 {
         font-size: 3.5rem;
         line-height: 1.2;
@@ -42,7 +42,7 @@ a:visited {
     background: #eee;
     box-sizing: border-box;
 }
-@media (max-width: 460px) {
+@media screen and (max-width: 460px) {
     #main {
         margin: 0;
     }
@@ -64,15 +64,19 @@ img {
 
 @media screen and (max-width: 560px) {
     img {
-        width: 100%;
+        width: 90%;
+        margin: 10px;
     }
 }
 
 @media screen and (max-width: 560px){
     #img-caption {
-        font-size: 1rem;
+        font-size: 1.2rem;
+        margin: 5px 0 5px 0;
+
     }
 }
+
 
 #headline {
     margin: 50px 0;
